--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p id='info'>Loading... | Loading...</p>
 			<img onclick='addpt()' src='brownie.jpg' width='200px' height='200px'><br>
 		</div>
-		<p>BrowniePoints &copy; CaptainWebServices 2017</p>
+		<p>Check out this project's code on <a color='blue' href='https://github.com/DatOneLefty/Brownie-Clicker'>GitHub</a>!</p>
 	</center>
 
 </body>
