--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<title>Brownie Points 1.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='stylesheet' href='captain.css?id=3'>
-	<script src='brownie.js?id=3'></script>
+	<script src='brownie.js?id=5'></script>
 </head>
 
 <body onload='init();'>
@@ -12,11 +12,11 @@
 			<p>Get all the brownies!</p>
 			<hr>
 			<a href="#">Per Second Shop</a> | <a href="#">Per Second Shop</a> | <a href="#">Settings</a> | <a href="#">Leaderboard</a>
-			<p id='server'><font color='green'>game started successfully</font></p>
 			<hr>
+			<p id='server'><font color='green'>game started successfully</font></p>
 			<br>
 			<h2 id='brownies'>Loading...</h2>
-			<div class='shop' id='shop-ps'>
+			<div class='shop' id='highscores'>
 			</div>
 			<p id='info'>Loading... | Loading...</p>
 			<img onclick='addpt()' src='brownie.jpg' width='200px' height='200px'><br>
