show highscores on client

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 	<title>Brownie Points 1.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='stylesheet' href='captain.css?id=3'>
+	<link rel='stylesheet' href='captain.css?id=4'>
 	<script src='brownie.js?id=5'></script>
 </head>
 
@@ -11,12 +11,12 @@
 			<h1>Brownie Points<font color='#7c5125' size="5px"><sup>1.0</sup></font></h1>
 			<p>Get all the brownies!</p>
 			<hr>
-			<a href="#">Per Second Shop</a> | <a href="#">Per Second Shop</a> | <a href="#">Settings</a> | <a href="#">Leaderboard</a>
+			<a href="#">Per Second Shop</a> | <a href="#">Per Second Shop</a> | <a href="#">Settings</a> | <a onclick='show_hs();' href="#">Leaderboard</a>
 			<hr>
 			<p id='server'><font color='green'>game started successfully</font></p>
 			<br>
 			<h2 id='brownies'>Loading...</h2>
-			<div class='shop' id='highscores'>
+			<div class='shop' id='highscores' style='display: none;'>
 			</div>
 			<p id='info'>Loading... | Loading...</p>
 			<img onclick='addpt()' src='brownie.jpg' width='200px' height='200px'><br>
